--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "German Alfonso <geralfonsocastillo@gmail.com>",
   "license": "ISC",
   "devDependencies": {
+    "babel-cli": "^6.26.0",
     "babelify": "^8.0.0",
     "browser-sync": "^2.23.6",
     "browserify": "^16.1.0",
@@ -26,5 +27,8 @@
     "gulp-uglify": "^3.0.0",
     "pump": "^3.0.0",
     "vinyl-source-stream": "^2.0.0"
+  },
+  "dependencies": {
+    "npm": "^5.8.0"
   }
 }
